[package]
name = "zk-shuffle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safe-shuffle = "0.1.1"
rand_core = { version = "0.6.3", features = [ "getrandom" ] }
elgamal_ristretto = { git = "https://github.com/erwanor/elgamal.git", branch = "zkp-fork"}
merlin = "3.0.0"
curve25519-dalek-ng = "4.1.1"
sha2 = "0.9"
